ingress-traefik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-prod
  namespace: guestbook-prod
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: guestbook.vika-cloud.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: guestbook-prod
            port:
              number: 80
